--- a/app/src/main/res/layout/fragment_goods_ex.xml
+++ b/app/src/main/res/layout/fragment_goods_ex.xml
@@ -124,6 +124,7 @@
         android:layout_gravity="bottom"
         android:layout_marginBottom="20dp">
         <Button
+            android:id="@+id/btnGoodsExFavoriteList"
             android:layout_width="120dp"
             android:layout_height="50dp"
             android:text="관심목록"
@@ -134,6 +135,7 @@
             android:layout_marginLeft="60dp"
             />
         <Button
+            android:id="@+id/btnGoodsExForm"
             android:layout_width="120dp"
             android:layout_height="50dp"
             android:text="가수요조사 폼"
